Introduce entropy percentiles
