# lib/routes/api.ts
@@ -248,9 +248,11 @@ function exposeDrift(express: Express, aspectRegistry: AspectRegistry, store: Pr
             try {
                 const type = req.query.type;
                 const band = req.query.band === "true";
-                logger.info("Entropy query: threshold=%s, type=%s", req.query.threshold, type);
-                const threshold: number = req.query.threshold ? parseInt(req.query.threshold, 10) : 0;
-                let driftTree = await store.aspectDriftTree(req.params.workspace_id, threshold, type);
+                const percentile: number = req.query.percentile ? parseFloat(req.query.percentile) : 0;
+                logger.info("Entropy query: query.percentile='%s', percentile=%d, type=%s",
+                    req.query.percentile, percentile, type);
+
+                let driftTree = await store.aspectDriftTree(req.params.workspace_id, percentile, type);
                 fillInAspectNames(aspectRegistry, driftTree.tree);
                 if (!type) {
                     driftTree = removeAspectsWithoutMeaningfulEntropy(aspectRegistry, driftTree);
