# lib/routes/web-app/webAppRoutes.ts
@@ -70,9 +70,9 @@ export function addWebAppRoutes(
     aspectRegistry: AspectRegistry,
     store: ProjectAnalysisResultStore,
     httpClientFactory: HttpClientFactory): {
-        customizer: ExpressCustomizer,
-        routesToSuggestOnStartup: Array<{ title: string, route: string }>,
-    } {
+    customizer: ExpressCustomizer,
+    routesToSuggestOnStartup: Array<{ title: string, route: string }>,
+} {
     const topLevelRoute = "/overview";
     return {
         routesToSuggestOnStartup: [{ title: "Atomist Visualizations", route: topLevelRoute }],
@@ -146,10 +146,10 @@ function exposeExplorePage(express: Express,
         const dataUrl = `/api/v1/${workspaceId}/explore?tags=${tags}`;
         const readable = describeSelectedTagsToAnimals(tags.split(","));
         return renderDataUrl(workspaceId, {
-            dataUrl,
-            heading: "Explore repositories by tag",
-            title: `Repositories matching ${readable}`,
-        },
+                dataUrl,
+                heading: "Explore repositories by tag",
+                title: `Repositories matching ${readable}`,
+            },
             aspectRegistry, httpClientFactory, req, res);
     });
 }
@@ -160,15 +160,17 @@ function exposeDriftPage(express: Express,
                          aspectRegistry: AspectRegistry): void {
     express.get("/drift", ...handlers, async (req, res) => {
         const workspaceId = req.query.workspaceId || "*";
-        const threshold = req.query.threshold || 0;
+        const percentile = req.query.percentile || 0;
         const type = req.query.type;
         const dataUrl = `/api/v1/${workspaceId}/drift` +
-            `?threshold=${threshold}` +
+            `?percentile=${percentile}` +
             (!!type ? `&type=${type}` : "");
         return renderDataUrl(workspaceId, {
             dataUrl,
             title: "Drift by aspect",
-            heading: type ? `Drift across aspect ${type}` : `Drift across all aspects: entropy over ${threshold}`,
+            heading: type ?
+                `Drift across aspect ${type} with entropy above ${percentile}th percentile` :
+                `Drift across all aspects with entropy above ${percentile}th percentile`,
             subheading: "Sizing shows degree of entropy",
         }, aspectRegistry, httpClientFactory, req, res);
     });
@@ -192,9 +194,9 @@ function exposeFingerprintReportPage(express: Express,
         const dataUrl = `/api/v1/${workspaceId}/fingerprint/${
             encodeURIComponent(type)}/${
             encodeURIComponent(name)}?byOrg=${
-            req.query.byOrg === "true"}&presence=${req.query.presence === "true"}&progress=${
-            req.query.progress === "true"}&otherLabel=${req.query.otherLabel === "true"}&trim=${
-            req.query.trim === "true"}`;
+        req.query.byOrg === "true"}&presence=${req.query.presence === "true"}&progress=${
+        req.query.progress === "true"}&otherLabel=${req.query.otherLabel === "true"}&trim=${
+        req.query.trim === "true"}`;
         return renderDataUrl(workspaceId, {
             dataUrl,
             title: `Atomist aspect drift`,
@@ -228,11 +230,11 @@ function exposeCustomReportPage(express: Express,
 // TODO fix any
 async function renderDataUrl(workspaceId: string,
                              page: {
-        title: string,
-        heading: string,
-        subheading?: string,
-        dataUrl: string,
-    },
+                                 title: string,
+                                 heading: string,
+                                 subheading?: string,
+                                 dataUrl: string,
+                             },
                              aspectRegistry: AspectRegistry,
                              httpClientFactory: HttpClientFactory,
                              req: any,
@@ -365,8 +367,8 @@ function displayStyleAccordingToIdeal(fingerprint: AugmentedFingerprintForDispla
 export type AugmentedFingerprintForDisplay =
     FP &
     Pick<ProjectFingerprintForDisplay, "displayValue" | "displayName"> & {
-        ideal?: Ideal;
-    };
+    ideal?: Ideal;
+};
 
 export interface AugmentedAspectForDisplay {
     aspect: ManagedAspect;
